// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Modal Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="modal"
  >
    <div
      className="modal-title"
    >
      <div />
      <button
        aria-label="button"
        className="buttons size-short color-inverted without-border"
      >
        <div
          className="container color-primary size-sm"
        >
          <svg
            height="100%"
            stroke="currentColor"
            viewBox="0 0 21 21"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
              strokeLinecap="round"
              strokeLinejoin="round"
            >
              <path
                d="M15.5 15.5l-10-10zM15.5 5.5l-10 10"
              />
            </g>
          </svg>
        </div>
      </button>
    </div>
    <div
      className="spacer horizontal"
      style={
        Object {
          "height": 5,
        }
      }
    />
    <div
      className="container-separator color-primary"
    >
      <hr
        className="separator-line color-primary size-xs"
        title="Head finish"
      />
    </div>
    <div
      className="modal-body"
    >
      Consent doubt Tuckborough challenge destroying.
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Modal With Title And Footer 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="modal"
  >
    <div
      className="modal-title"
    >
      <div>
        <h2
          className="container color-primary"
        >
          Hey men!
        </h2>
      </div>
      <button
        aria-label="button"
        className="buttons size-short color-inverted without-border"
      >
        <div
          className="container color-primary size-sm"
        >
          <svg
            height="100%"
            stroke="currentColor"
            viewBox="0 0 21 21"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
              strokeLinecap="round"
              strokeLinejoin="round"
            >
              <path
                d="M15.5 15.5l-10-10zM15.5 5.5l-10 10"
              />
            </g>
          </svg>
        </div>
      </button>
    </div>
    <div
      className="spacer horizontal"
      style={
        Object {
          "height": 5,
        }
      }
    />
    <div
      className="container-separator color-primary"
    >
      <hr
        className="separator-line color-primary size-xs"
        title="Head finish"
      />
    </div>
    <div
      className="modal-body"
    >
      Consent doubt Tuckborough challenge destroying.
    </div>
    <div
      className="container-separator color-primary"
    >
      <hr
        className="separator-line color-primary size-xs"
        title="footer"
      />
    </div>
    <div
      className="spacer horizontal"
      style={
        Object {
          "height": undefined,
        }
      }
    />
    <div
      className="modal-footer"
    >
      <button
        aria-label="button"
        className="buttons size-short color-inverted"
      >
        <h3
          className="container color-primary"
        >
          Cancel
        </h3>
      </button>
      <button
        aria-label="button"
        className="buttons size-short color-primary"
      >
        <h3
          className="container color-button"
        >
          Aceptar
        </h3>
      </button>
    </div>
  </div>
</div>
`;
